// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single-row 1`] = `
<div
  className="comp-list-row classname-of-(elem_1)"
  data-id="elem_1"
  onClick={undefined}
  onDoubleClick={undefined}
>
  <div
    className="comp-list-row-data mandatory-field classname-of-(elem_1,name)"
  >
    <div
      className="mandatory-field-label"
    >
      element 1
    </div>
    <div
      className="mandatory-field-info"
    >
      
    </div>
  </div>
  <div
    className="comp-list-row-data row-label classname-of-(elem_1,type)"
  >
    string
  </div>
  <div
    className="comp-list-row-data row-label classname-of-(elem_1,desc)"
  >
    bla bla bla
  </div>
</div>
`;

exports[`single-row mandatory 1`] = `
<div
  className="comp-list-row classname-of-(elem_2)"
  data-id="elem_2"
  onClick={undefined}
  onDoubleClick={undefined}
>
  <div
    className="comp-list-row-data mandatory-field classname-of-(elem_2,name)"
  >
    <div
      className="mandatory-field-label"
    >
      element 2
    </div>
    <div
      className="mandatory-field-info"
    >
      *
    </div>
  </div>
  <div
    className="comp-list-row-data row-label classname-of-(elem_2,type)"
  >
    string
  </div>
  <div
    className="comp-list-row-data row-label classname-of-(elem_2,desc)"
  >
    This element is mandatory
  </div>
</div>
`;
